Se agregó un formulario

--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
 <body>
     <h1>Titulo se modificó nuevamente!</h1>
     
+    <form action="#" method="get">
+        <input type="button" value="Enviar">
+    </form>
 </body>
 </html>
