--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <input type="number" name="age" id="age">
         <input type="date" name="birthdate" id="birthdate">
         <img src="#" alt="Test" />
-        <video src="cat.mp4"></video>
+        <video src="video/cat.mp4"></video>
         <input type="button" value="Enviar">
     </form>
 </body>
