--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <input type="text" name="lastName" id="lastName">
         <input type="number" name="age" id="age">
         <input type="date" name="birthdate" id="birthdate">
-        <img src="#" alt="Test" />
+        <img src="#" alt="Test cambio" />
         <video src="video/cat.mp4"></video>
         <input type="button" value="Enviar">
     </form>
