--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <input type="number" name="age" id="age">
         <input type="date" name="birthdate" id="birthdate">
         <input type="number" name="Tel" id="tel">
+        <input type="text" name="doc" id="doc">
         <img src="#" alt="Test cambio" />
         <video src="video/cat.mp4"></video>
         <input type="button" value="Enviar">
