Agregamos campo direccion

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <input type="date" name="birthdate" id="birthdate">
         <input type="number" name="Tel" id="tel">
         <input type="text" name="doc" id="doc">
+        <input type="text" name="direccion" id="direccion">
         <img src="#" alt="Test cambio" />
         <video src="video/cat.mp4"></video>
         <input type="button" value="Enviar">
